--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "jose": "^5.6.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
