--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.1.5",
     "formidable": "^3.5.1",
     "jose": "^5.6.2",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^14.2.5",
     "react": "^18",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
