--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "git pull origin main && npm install && npx prisma migrate deploy && pm2 restart opniaogospel"
+    "deploy": "git pull origin main && npm install && npx prisma migrate deploy && pm2 restart opniaogospel",
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
