--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jose": "^5.6.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.55.0",
     "next": "^14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
@@ -51,6 +52,7 @@
     "@types/formidable": "^3.4.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.6",
+    "@types/mixpanel-browser": "^2.49.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
