--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-share": "^5.1.0",
+    "react-social-media-embed": "^2.5.13",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
